k8s/overlays/development/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hta-web
  namespace: hta-calibration
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: hta-web
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: 1000m
              memory: 1Gi
